--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <html>
+  
   <head>
-    <title>My blog</title>
+    <title>Kyle's blog</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+<style>
+  .grey-text {
+    color:rgb(148, 148, 148);
+  }
+  h1{font-size: 100;}
+  h2 {font-family: Anton;}
+  ul {font-size 30px}
+  
+</style>
+
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <!-- centre/align text
+  Divide content on a page using divs and spans 
+Position elements using CSS
+colour some text, maybe a light color
+    background,
+Compare and use classes and ids to manipulate elements-->
+    <h1>Kia ora Taiao! (Hello World!) I am learning!</h1> 
+    <h2> This is the beginning of my website home page. I really feel like I have no creativity with this lol</h2>
+    <p class="grey-text"> It will eventually contain a list of links to all my blogs, as is required. </p>
+    <a href="./blog/sprint1-technical.html" >sprint 1 technical blog</a>
+    <p>I like music. Alot.</p> 
+    <footer>
+      <img src="https://www.magneticmag.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_620/MTM3MzM5OTQ3NzY0OTUwMTg1/screen-shot-2016-03-18-at-114542-ampng.png" alt="Soundcloud Logo">
+    <p><I dj sometimes. Heres a link to my pages.</p>
+      <ul>
+        <li><a href="https://soundcloud.com/djkaydub">Soundcloud</a></li>
+        <li><a href="https://www.mixcloud.com/kyledwatson/">Mixcloud</a></li>
+        <li><a href="https://www.whosampled.com/kaydubnz/">Whosampled</a></li>
+      </ul>
+    
+    
+  </footer>
   </body>
 </html>
