--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ Compare and use classes and ids to manipulate elements-->
     <h2> This is the beginning of my website home page. I really feel like I have no creativity with this lol</h2>
     <p class="grey-text"> It will eventually contain a list of links to all my blogs, as is required. </p>
     <a href="./blog/sprint1-technical.html" >sprint 1 technical blog</a>
+    <a href="./blog/sprint1-cultural.html" >sprint 1 cultural blog</a>
+    <br>
+    <a href="./blog/sprint2_technical.html" >sprint 2 technical blog</a>
+    <a href="./blog/sprint2-cultural.html" >sprint 2 cultural blog</a>
     <p>I like music. Alot.</p> 
     <footer>
       <img src="https://www.magneticmag.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_620/MTM3MzM5OTQ3NzY0OTUwMTg1/screen-shot-2016-03-18-at-114542-ampng.png" alt="Soundcloud Logo">
