--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   .grey-text {
     color:rgb(148, 148, 148);
   }
+  align-items: center;
   h1{font-size: 100;}
   h2 {font-family: Anton;}
   ul {font-size 30px}
