--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <title>Kyle's blog</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
 <style>
   .grey-text {
     color:rgb(148, 148, 148);
   }
-  align-items: center;
   h1{font-size: 100;}
   h2 {font-family: Anton;}
   ul {font-size 30px}
