--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  
   <head>
-    <title>Kyle's blog</title>
+<title>Kyle's blog</title>
+<link rel="stylesheet" href="./styles/main.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -10,12 +10,14 @@
   .grey-text {
     color:rgb(148, 148, 148);
   }
-  h1{font-size: 100;}
+ 
   h2 {font-family: Anton;}
-  ul {font-size 30px}
+  ul {font-size 30px;}
 </style>
 
-  <body>
+</head>
+
+<body>
   
     <!-- centre/align text
   Divide content on a page using divs and spans 
@@ -23,7 +25,9 @@ Position elements using CSS
 colour some text, maybe a light color
     background,
 Compare and use classes and ids to manipulate elements-->
-    <h1>Kia ora Taiao! (Hello World!) I am learning!</h1> 
+    <div class="head1">
+      <h1 id="mainTitle">Kia ora Taiao! (Hello World!) I am learning!</h1> 
+    </div>
     <h2> This is the beginning of my website home page. I really feel like I have no creativity with this lol</h2>
     <p class="grey-text"> It will eventually contain a list of links to all my blogs, as is required. </p>
     <a href="./blog/sprint1-technical.html" >sprint 1 technical blog</a>
